# fx3u-mcprotocol

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: multi_plc_polling.py  smoke_single_plc.py
fx3u_mcprotocol/: __init__.py  client.py  exceptions.py  profiles.py  protocol_ascii.py  protocol_binary.py  symbols.py  transport.py
tests/: test_client_api.py  test_profiles.py  test_symbols.py
