[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fx3u-mcprotocol"
version = "0.4.0"
description = "MC Protocol Ethernet driver for Mitsubishi FX3 PLCs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "PIYUSH GHUMELIA" }]

[tool.setuptools.packages.find]
where = ["."]
 
[tool.setuptools]
license-files = []
